5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1692_1105.log
== TEST (2019-05-01 22:08:43) 
-- CODE:
brasao=int(input("digite o brasao:"))
if(lobo==Stark):
elif(brasao==leao):
	  casa="Lannister"
elif(brasao==veado):
	  casa="Baratheon"
elif(brasao==dragao):
	  casa="Targaryen"
elif(brasao==rosa):
	casa="Tyrell"
elif(brasao==sol):
	casa="Martell"
elif(brasao==lula):
	casa="Greyjoy"
elif(brasao==esfolado):
	casa="Bolton"
else:
print("Entrada:", "Brasao invalido")
print("Entrada:", casa)
turta	Tully
-- ERROR:
File "XXXX", line 3
    elif(brasao==leao):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:10:22) 
-- CODE:
brasao=int(input("digite o brasao:"))
if(brasao==lobo):
	casa="Stark"
elif(brasao==leao):
	  casa="Lannister"
elif(brasao==veado):
	  casa="Baratheon"
elif(brasao==dragao):
	  casa="Targaryen"
elif(brasao==rosa):
	casa="Tyrell"
elif(brasao==sol):
	casa="Martell"
elif(brasao==lula):
	casa="Greyjoy"
elif(brasao==esfolado):
	casa="Bolton"
else:
print("Entrada:", "Brasao invalido")
print("Entrada:", casa)
turta	Tully
-- ERROR:
File "XXXX", line 19
    print("Entrada:", "Brasao invalido")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:14:09) 
-- CODE:
brasao=int(input("digite o brasao:"))
if(brasao==lobo):
	casa="Stark"
elif(brasao==leao):
	  casa="Lannister"
elif(brasao==veado):
	  casa="Baratheon"
elif(brasao==dragao):
	  casa="Targaryen"
elif(brasao==rosa):
	casa="Tyrell"
elif(brasao==sol):
	casa="Martell"
elif(brasao==lula):
	casa="Greyjoy"
elif(brasao==esfolado):
	casa="Bolton"
elif(brasao==turta):
	casa="Tully"
else:
	casa="Brasao invalido"
print("Entrada:", brasao)
print("Casa:", casa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    brasao=int(input())
ValueError: invalid literal for int() with base 10: 'lula'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:14:49) 
-- CODE:
brasao=int(input("digite o brasao:"))
if(brasao==lobo):
	casa="Stark"
elif(brasao==leao):
	  casa="Lannister"
elif(brasao==veado):
	  casa="Baratheon"
elif(brasao==dragao):
	  casa="Targaryen"
elif(brasao==rosa):
	casa="Tyrell"
elif(brasao==sol):
	casa="Martell"
elif(brasao==lula):
	casa="Greyjoy"
elif(brasao==esfolado):
	casa="Bolton"
elif(brasao==turta):
	casa="Tully"
else:
	casa="Brasao invalido"
print("Entrada:", brasao)
print("Casa:", casa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    brasao=int(input())
ValueError: invalid literal for int() with base 10: 'lula'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:15:23) 
-- CODE:
brasao=float(input("digite o brasao:"))
if(brasao==lobo):
	casa="Stark"
elif(brasao==leao):
	  casa="Lannister"
elif(brasao==veado):
	  casa="Baratheon"
elif(brasao==dragao):
	  casa="Targaryen"
elif(brasao==rosa):
	casa="Tyrell"
elif(brasao==sol):
	casa="Martell"
elif(brasao==lula):
	casa="Greyjoy"
elif(brasao==esfolado):
	casa="Bolton"
elif(brasao==turta):
	casa="Tully"
else:
	casa="Brasao invalido"
print("Entrada:", brasao)
print("Casa:", casa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    brasao=float(input())
ValueError: could not convert string to float: 'lula'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:16:20) 
-- CODE:
brasao=float(input("digite o brasao:"))
if(brasao==lobo):
	casa="Stark"
elif(brasao==leao):
	casa="Lannister"
elif(brasao==veado):
	casa="Baratheon"
elif(brasao==dragao):
	casa="Targaryen"
elif(brasao==rosa):
	casa="Tyrell"
elif(brasao==sol):
	casa="Martell"
elif(brasao==lula):
	casa="Greyjoy"
elif(brasao==esfolado):
	casa="Bolton"
elif(brasao==turta):
	casa="Tully"
else:
	casa="Brasao invalido"
print("Entrada:", brasao)
print("Casa:", casa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    brasao=float(input())
ValueError: could not convert string to float: 'lula'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:16:49) 
-- CODE:
brasao=int(input("digite o brasao:"))
if(brasao==lobo):
	casa="Stark"
elif(brasao==leao):
	casa="Lannister"
elif(brasao==veado):
	casa="Baratheon"
elif(brasao==dragao):
	casa="Targaryen"
elif(brasao==rosa):
	casa="Tyrell"
elif(brasao==sol):
	casa="Martell"
elif(brasao==lula):
	casa="Greyjoy"
elif(brasao==esfolado):
	casa="Bolton"
elif(brasao==turta):
	casa="Tully"
else:
	casa="Brasao invalido"
print("Entrada:", brasao)
print("Casa:", casa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    brasao=int(input())
ValueError: invalid literal for int() with base 10: 'lula'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:17:57) 
-- CODE:
brasao=int(input("digite o brasao:"))
if(brasao==lobo):
	casa="Stark"
elif(brasao==leao):
	casa="Lannister"
elif(brasao==veado):
	casa="Baratheon"
elif(brasao==dragao):
	casa="Targaryen"
elif(brasao==rosa):
	casa="Tyrell"
elif(brasao==sol):
	casa="Martell"
elif(brasao==lula):
	casa="Greyjoy"
elif(brasao==esfolado):
	casa="Bolton"
elif(brasao==turta):
	casa="Tully"
else:
	casa="Brasao invalido"
print("Entrada:", brasao)
print("Casa:", casa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    brasao=int(input())
ValueError: invalid literal for int() with base 10: 'lula'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:21:01) 
-- CODE:
Brasao= int(input("digite o brasao:"))
if(Brasao==lobo):
	casa="Stark"
elif(Brasao==leao):
	casa="Lannister"
elif(Brasao==veado):
	casa="Baratheon"
elif(Brasao==dragao):
	casa="Targaryen"
elif(Brasao==rosa):
	casa="Tyrell"
elif(Brasao==sol):
	casa="Martell"
elif(Brasao==lula):
	casa="Greyjoy"
elif(Brasao==esfolado):
	casa="Bolton"
elif(Brasao==turta):
	casa="Tully"
else:
	casa="Brasao invalido"
print("Entrada:", Brasao)
print("Casa:", casa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Brasao= int(input())
ValueError: invalid literal for int() with base 10: 'lula'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:21:36) 
-- CODE:
Brasao= (int(input("digite o brasao:")))
if(Brasao==lobo):
	casa="Stark"
elif(Brasao==leao):
	casa="Lannister"
elif(Brasao==veado):
	casa="Baratheon"
elif(Brasao==dragao):
	casa="Targaryen"
elif(Brasao==rosa):
	casa="Tyrell"
elif(Brasao==sol):
	casa="Martell"
elif(Brasao==lula):
	casa="Greyjoy"
elif(Brasao==esfolado):
	casa="Bolton"
elif(Brasao==turta):
	casa="Tully"
else:
	casa="Brasao invalido"
print("Entrada:", Brasao)
print("Casa:", casa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Brasao= (int(input()))
ValueError: invalid literal for int() with base 10: 'lula'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:22:43) 
-- CODE:
Brasao= int(input(digite o brasao:))
if(Brasao==lobo):
	casa="Stark"
elif(Brasao==leao):
	casa="Lannister"
elif(Brasao==veado):
	casa="Baratheon"
elif(Brasao==dragao):
	casa="Targaryen"
elif(Brasao==rosa):
	casa="Tyrell"
elif(Brasao==sol):
	casa="Martell"
elif(Brasao==lula):
	casa="Greyjoy"
elif(Brasao==esfolado):
	casa="Bolton"
elif(Brasao==turta):
	casa="Tully"
else:
	casa="Brasao invalido"
print("Entrada:", Brasao)
print("Casa:", casa)

-- ERROR:
File "XXXX", line 1
    Brasao= int(input(digite o brasao:))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:23:03) 
-- CODE:
Brasao= int(input("digite o brasao:"))
if(Brasao==lobo):
	casa="Stark"
elif(Brasao==leao):
	casa="Lannister"
elif(Brasao==veado):
	casa="Baratheon"
elif(Brasao==dragao):
	casa="Targaryen"
elif(Brasao==rosa):
	casa="Tyrell"
elif(Brasao==sol):
	casa="Martell"
elif(Brasao==lula):
	casa="Greyjoy"
elif(Brasao==esfolado):
	casa="Bolton"
elif(Brasao==turta):
	casa="Tully"
else:
	casa="Brasao invalido"
print("Entrada:", Brasao)
print("Casa:", casa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Brasao= int(input())
ValueError: invalid literal for int() with base 10: 'lula'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
